--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron text-center" style="background-image: url('https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'); background-position: center; background-size: cover; height: fit-content;">
         <h1 style="color:yellow">Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p><a class="btn btn-primary btn-sm" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
 
       <!-- Add section for Mars News -->
@@ -63,7 +63,7 @@
         {% for hemisphere in mars.hemispheres %}
         <div class="col-md-6">
           <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="Responsive image" class="img-responsive">
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="Responsive image" class="img-thumbnail" width="100%/9">
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
